--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.2.12",
+    "jasmine": "^5.1.0",
     "ngx-pagination": "^6.0.3",
     "octokit": "^3.1.1",
     "rxjs": "~7.8.0",
@@ -29,7 +30,9 @@
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.11",
     "autoprefixer": "^10.4.16",
+    "jasmine-auto-spies": "^8.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
